# squadro-solver

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
src/: board_state.rs  file_operations.rs  generate.rs  main.rs  play.rs
