[package]
name = "squadro-solver"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.1.0"
roaring = "0.10.7"
decurse = "0.0.4"
clap = { version = "4.5.0", features = ["derive"] }
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
regex = "1.10.5"
tempfile = "3.10.1"
